--- a/Demo.csproj
+++ b/Demo.csproj
@@ -501,6 +501,7 @@
     <Compile Include="Assets\Scripts\Client\GameLogic\Systems\AbilitySystem\AbilityParser.cs" />
     <Compile Include="Assets\Scripts\Client\GameLogic\Systems\AbilitySystem\ModifierExecutor.cs" />
     <Compile Include="Assets\Scripts\Client\GameLogic\Systems\BehaviourTreeSystem.cs" />
+    <Compile Include="Assets\Scripts\Client\GameLogic\Systems\EntitySystem.cs" />
     <Compile Include="Assets\Scripts\Client\GameLogic\Systems\MovementSystem.cs" />
     <Compile Include="Assets\Scripts\Client\Input\ClickableBehaviour.cs" />
     <Compile Include="Assets\Scripts\Client\Input\InputHandlers\InputHandler.cs" />
